<resources>
    <string name="app_name">AdministrativoUJED</string>
    <string name="strCrear_cuenta"><u>Crear Cuenta </u></string>
    <string name="strOlvidaste"><u>¿Olvidaste tu contraseña? </u></string>
    <string name="email_hint">Email</string>
    <string name="email_description">Campo de Email</string>

    <string name="password_hint">Password</string>
    <string name="password_description">Campo de Password</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Inicio</string>
    <string name="title_tramites">title_tramites</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="title_calendario">calendario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidoP">Apellido Paterno</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="matricula">Matricula</string>
    <string name="turno">Turno</string>
    <string name="no_notifications">No hay notificaciones disponibles</string>
    <string name="rama">Rama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_up">nav_up</string>
    <string name="title_activity_nave_abajo">NaveAbajo</string>
    <string name="title_activity_navegacion">Navegacion</string>
    <string name="UJED"><font fgcolor="#FFFFFF">UJED MOVILE</font></string>
    <string name="title_activity_navegation">navegation_activity</string>
    <string name="turnos">dropDownMenuExample</string>
    <string name="lentes">Prestacion valida cada 2 años</string>
    <string name="dental">Aplica para la pareja del trabajador (Con copia del acta de matrimonio) e hijos
    del trabajador (Con copia del acta de nacimiento y menores de 18 años).</string>
    <string-array name="turno">
        <item>Matutino</item>
        <item>Vespertino</item>
        <item>Nocturno</item>
    </string-array>
    <string-array name="sexo">
        <item>Sexo</item>
        <item>Niño</item>
        <item>Niña</item>
    </string-array>

    <string-array name="tipoTrabajador">
        <item>Tipo trabajador</item>
        <item>Base</item>
        <item>Jubilado</item>
    </string-array>
    <string-array name="presencial">
        <item>Presencial o Virtual</item>
        <item>Presencial</item>
        <item>Virtual</item>
    </string-array>
    <string-array name="Escolarizado">
        <item>Escolarizado o Semiescolarizado</item>
        <item>Escolarizado</item>
        <item>Semiescolarizado</item>
    </string-array>
    <string-array name="Escuela">
        <item>Escuela o facultad</item>
        <item>COLEGIO DE CIENCIAS Y HUMANIDADES</item>
        <item>ESCUELA DE CIENCIAS Y TECNOLOGÍAS</item>
        <item>ESCUELA PREPARATORIA DIURNA</item>
        <item>ESCUELA DE LENGUAS</item>
        <item>ESCUELA DE PINTURA ESCULTURA ARTESANIAS</item>
        <item>ESCUELA PREPARATORIA NOCTURNA</item>
        <item>ESCUELA SUPERIOR DE MUSICA</item>
        <item>COLEGIO DE CIENCIAS Y HUMANIDADES</item>
        <item>FACULTAD DE MEDICINA VETERINARIA Y ZOOTECNIA</item>
        <item>FACULTAD CIENCIAS QUIMICAS </item>
        <item>FACULTAD DE CIENCIAS DE LA CULTURA FISICA Y DEPORTE</item>
        <item>FACULTAD DE CIENCIAS EXACTAS</item>
        <item>FACULTAD DE DERECHO Y CIENCIAS POLITICAS</item>
        <item>FACULTAD DE ECONOMIA, CONTADURIA Y ADMINISTRACION</item>
        <item>FACULTAD DE ENFERMERIA Y OBSTETRICIA</item>
        <item>FACULTAD DE MEDICINA Y NUTRICION</item>
        <item>FACULTAD DE ODONTOLOGIA</item>
        <item>PSICOLOGIA Y TERAPIA DE LA COMUNICAFACULTAD DECION HUMANA</item>
        <item>FACULTAD DE TRABAJO SOCIAL</item>
        <item>FACULTAD DE INGENIERIA, CIENCIAS Y ARQUITECTURA</item>
        <item>ESCUELA PREPARATORIA DIURNA</item>
        <item>FACULTAD DE CIENCIAS FORESTALES Y AMBIENTALES</item>
    </string-array>

    <string-array name="unidadAcademica">
        <item>Unidad Academica</item>
        <item>Adscripcion</item>
        <item>ABOGADO GENERAL</item>
        <item>BIBLIOTECA CENTRAL SGA</item>
        <item>BUFETE JURIDICO</item>
        <item>CENTRO DE DESARROLLO CULTURAL</item>
        <item>CENTRO DE DESARROLLO DEPORTE UNIV. (NUEVO)</item>
        <item>CENTRO DE GRADUADOS</item>
        <item>COMUNICACION SOCIAL (NUEVA)</item>
        <item>COMPRAS SGAD</item>
        <item>CONTRALORIA</item>
        <item>COORD TELECOMUNICACION INFORMATICA SGAD</item>
        <item>COORDINACION DE OBRAS SGAD</item>
        <item>CORRESPONDENCIA Y MENSAJERIA SGAD</item>
        <item>DIR. DE EXTENSION Y VINCULACION S.(NUEVA)</item>
        <item>DIR.DESARROLLO Y GESTION DE REC HUM SGAD</item>
        <item>DIRECCION INSTITUCIONAL DEL POSGRADO E INVESTIGACION</item>
        <item>DIRECCION PLANEACION INSTITUCIONAL SGA</item>
        <item>DIRECCION SERVICIOS EDUCATIVOS SGA</item>
        <item>DIRECCION SERVICIOS ESCOLARES DSE</item>
        <item>EDITORIAL (NUEVA)</item>
        <item>ESC PREPARATORIA DIURNA</item>
        <item>ESCUELA DE CIENCIAS Y TECNOLOGÍAS</item>
        <item>ESCUELA DE LENGUAS</item>
        <item>ESCUELA DE PINTURA ESCULTURA ARTESANIAS</item>
        <item>ESCUELA PREPARATORIA NOCTURNA</item>
        <item>ESCUELA SUPERIOR DE MUSICA</item>
        <item>FAC DE MEDICINA VETERINARIA Y ZOOTECNIA</item>
        <item>FACULTAD CIENCIAS QUIMICAS DURANGO</item>
        <item>FACULTAD DE CIENCIAS DE LA CULTURA FISICA Y DEPORTE</item>
        <item>FACULTAD DE CIENCIAS EXACTAS</item>
        <item>FACULTAD DE CIENCIAS FORESTALES</item>
        <item>FACULTAD DE DERECHO Y CIENCIAS POLITICAS</item>
        <item>FACULTAD DE ECONOMIA, CONTADURIA Y ADMINISTRACION</item>
        <item>FACULTAD DE ENFERMERIA Y OBSTETRICIA</item>
        <item>FACULTAD DE MEDICINA Y NUTRICION</item>
        <item>FACULTAD DE ODONTOLOGIA</item>
        <item>FACULTAD DE PSICOLOGIA Y TERAPIA DE LA COMUNICACION HUMANA</item>
        <item>FACULTAD DE TRABAJO SOCIAL</item>
        <item>HOSPITAL VETERINARIO</item>
        <item>INST. DE CIENCIAS SOCIALES</item>
        <item>INST. DE INVEST. HISTORICAS</item>
        <item>INST. DE INVEST. JURIDICAS</item>
        <item>INST. DE SILVICULT. E IND. MAD</item>
        <item>INSTITUTO DE BELLAS ARTES</item>
        <item>INSTITUTO DE INVESTIGACION CIENTIFICA</item>
        <item>LIBRERIA (NUEVA)</item>
        <item>MUSEO REGIONAL</item>
        <item>RADIO UNIVERSIDAD (NUEVA)</item>
        <item>RECTORIA</item>
        <item>RELACIONES LABORALES (NUEVA)</item>
        <item>RELACIONES PUBLICAS SGAD</item>
        <item>SERVICIOS GENERALES SGAD</item>
        <item>SISTEMA UNIVERSIDAD VIRTUAL SGA</item>
        <item>SPAUJED</item>
        <item>STAUJED</item>
        <item>STEUJED</item>
        <item>SUBSECRETARIA GENERAL ACADEMICA</item>
        <item>SUBSECRETARIA GENERAL ADMINISTRATIVA</item>
        <item>TESORERIA</item>
        <item>TV UJED (NUEVA)</item>

    </string-array>


    <string-array name="opticas">
        <item>SELECCIONE UNA OPTICA</item>
        <item>OPTICA LAURA</item>
        <item>OPTICA RENUEVO</item>
        <item>OPTICA COLONIAL</item>
        <item>ANZA OPRICOS</item>
        <item>OPTICA NOVA</item>
        <item>OTICA DURANGO</item>
    </string-array>


    <string-array name="periodo">
        <item>Periodo</item>
        <item>Semestre</item>
        <item>Cuatrimestre</item>
        <item>Nivel</item>
    </string-array>
    <string name="title_activity_editar_datos">Leanback editarDatos</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>