<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.administrativoujed.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        android:icon="@drawable/ic_home"
        />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.administrativoujed.ui.dashboard.DashboardFragment"
        android:label="Tramites"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.administrativoujed.ui.notifications.NotificationsFragment"
        android:label="@string/title_notificaciones"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_calendario"
        android:name="com.example.administrativoujed.ui.calendario.CalendarioFragment"
        android:label="@string/title_calendario"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/exentohijo"
        android:name="com.example.administrativoujed.exentohijo"
        android:label="Exentohijo"
        tools:layout="@layout/fragment_exentohijo" />



</navigation>